--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/another-page">Another page <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ another-page }}">Another page <small>{{ github_name }}</small></a></p>
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
