--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
       </header>
       <section>
         Is this where the md is rendered?
-
+        {{ site }}
       {{ content }}
 
       </section>
