--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         {% endif %}
           <p class="view"><a href="{{ another-page }}">Another page <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="{{ Sentiment }}">Sentiment Analysis <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ sentiment-page }}">Sentiment Analysis <small>{{ github_name }}</small></a></p>
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
