--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,9 @@
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/another-page">Another page <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/another-page">Home <small>{{ github_name }}</small></a></p>
+
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">Network <small>{{ github_name }}</small></a></p>
 
           <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
           
@@ -34,6 +36,7 @@
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
             <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
             <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+            <li><a href="https://google.pt">Download <strong>Notebook</strong></a></li>
           </ul>
         {% endif %}
       </header>
@@ -48,6 +51,7 @@
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Made with 🍕 and ☕ </small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
