--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/another-page">Home <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
 
           <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">Network <small>{{ github_name }}</small></a></p>
 
@@ -34,12 +34,11 @@
         {% if site.show_downloads %}
           <ul>
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-            <li><a href="https://google.pt">Download <strong>Notebook</strong></a></li>
+            <li><a href="{{ site.github.tar_url }}">Contact <strong>TEAM</strong></a></li>
+            <li><a href="https://www.google.pt/?gws_rd=ssl">Donwload <strong>Notebook</strong></a></li>
           </ul>
         {% endif %}
-      </header>
+      </header>ad
       <section>
         
       {{ content }}
@@ -47,10 +46,9 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+<!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-        <p><small>Made with 🍕 and ☕ </small></p>
+        <p><small>Made with 🍕 and 🧠 </small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
