--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
             <li><a href="https://www.google.pt/?gws_rd=ssl">Donwload <strong>Notebook</strong></a></li>
           </ul>
         {% endif %}
-      </header>ad
+      </header>
       <section>
         
       {{ content }}
