--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
           <ul>
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
             <li><a href="{{ site.github.tar_url }}">Contact <strong>TEAM</strong></a></li>
-            <li><a href="https://www.google.pt/?gws_rd=ssl">Donwload <strong>Notebook</strong></a></li>
+            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook</strong></a></li>
           </ul>
         {% endif %}
       </header>
@@ -43,7 +43,7 @@
         
       {{ content }}
 
-      </section>
+      </section>s
       <footer>
         {% if site.github.is_project_page %}
 <!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
