--- a/_layouts/default_network.html
+++ b/_layouts/default_network.html
@@ -23,7 +23,7 @@
         {% endif %}
           <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="{{ site.relative_url }}/network-page">Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">Network <small>{{ github_name }}</small></a></p>
 
           <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
 
@@ -40,10 +40,9 @@
         {% endif %}
       </header>
       <section>
-
       {{ content }}
-
-
+      <svg width="960" height="600"></svg>
+      {{ content}}
       </section>s
       <footer>
         {% if site.github.is_project_page %}
@@ -53,6 +52,95 @@
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <style>
+
+      .links line {
+        stroke: #999;
+        stroke-opacity: 0.6;
+      }
+
+      .nodes circle {
+        stroke: #fff;
+        stroke-width: 1.5px;
+      }
+
+</style>
+    <script>
+
+var svg = d3.select("svg"),
+    width = +svg.attr("width"),
+    height = +svg.attr("height");
+
+var color = d3.scaleOrdinal(d3.schemeCategory20);
+
+var simulation = d3.forceSimulation()
+    .force("link", d3.forceLink().id(function(d) { return d.id; }))
+    .force("charge", d3.forceManyBody())
+    .force("center", d3.forceCenter(width / 2, height / 2));
+
+d3.json("data/mention_gcc.json", function(error, graph) {
+  if (error) throw error;
+
+  var link = svg.append("g")
+      .attr("class", "links")
+    .selectAll("line")
+    .data(graph.links)
+    .enter().append("line")
+      .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
+
+  var node = svg.append("g")
+      .attr("class", "nodes")
+    .selectAll("circle")
+    .data(graph.nodes)
+    .enter().append("circle")
+      .attr("r", 5)
+      .call(d3.drag()
+          .on("start", dragstarted)
+          .on("drag", dragged)
+          .on("end", dragended));
+
+  node.append("title")
+      .text(function(d) { return d.id; });
+
+  simulation
+      .nodes(graph.nodes)
+      .on("tick", ticked);
+
+  simulation.force("link")
+      .links(graph.links);
+
+  function ticked() {
+    link
+        .attr("x1", function(d) { return d.source.x; })
+        .attr("y1", function(d) { return d.source.y; })
+        .attr("x2", function(d) { return d.target.x; })
+        .attr("y2", function(d) { return d.target.y; });
+
+    node
+        .attr("cx", function(d) { return d.x; })
+        .attr("cy", function(d) { return d.y; });
+  }
+});
+
+function dragstarted(d) {
+  if (!d3.event.active) simulation.alphaTarget(0.3).restart();
+  d.fx = d.x;
+  d.fy = d.y;
+}
+
+function dragged(d) {
+  d.fx = d3.event.x;
+  d.fy = d3.event.y;
+}
+
+function dragended(d) {
+  if (!d3.event.active) simulation.alphaTarget(0);
+  d.fx = null;
+  d.fy = null;
+}
+
+</script>
 
 
   {% if site.google_analytics %}
