--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,11 @@
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
-          <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="/"/>Home <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="{{ site.relative_url }}/network-page">Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="/network-page">Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
@@ -44,7 +44,7 @@
       {{ content }}
 
 
-      </section>s
+      </section>
       <footer>
         {% if site.github.is_project_page %}
 <!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
