--- a/_layouts/default_network.html
+++ b/_layouts/default_network.html
@@ -14,58 +14,20 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
-          <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
-
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">Network <small>{{ github_name }}</small></a></p>
-
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
-
-        {% if site.github.is_user_page %}
-          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-          <ul>
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Contact <strong>TEAM</strong></a></li>
-            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook</strong></a></li>
-          </ul>
-        {% endif %}
-      </header>
-      <section>
+      <a class="back-button" href="/">Back</a>
       {{ content }}
-      <svg width="960" height="600"></svg>
+      <svg style="width:100%;" height="600"></svg>
       {{ content}}
-      </section>s
-      <footer>
-        {% if site.github.is_project_page %}
-<!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
-        {% endif %}
-        <p><small>Made with 🍕 and 🧠 </small></p>
-      </footer>
+
     </div>
+    <footer>
+      {% if site.github.is_project_page %}
+<!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
+      {% endif %}
+      <p><small>Made with 🍕 and 🧠 </small></p>
+    </footer>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <style>
-
-      .links line {
-        stroke: #999;
-        stroke-opacity: 0.6;
-      }
-
-      .nodes circle {
-        stroke: #fff;
-        stroke-width: 1.5px;
-      }
-
-</style>
     <script>
 
 var svg = d3.select("svg"),
