--- a/_layouts/default_network.html
+++ b/_layouts/default_network.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <a class="back-button" href="/">Back</a>
+      <a class="back-button" href="{{site.baseurl}}/">Back</a>
       {{ content }}
       <svg style="width:100%;" height="600"></svg>
       {{ content}}
