--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,11 @@
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
-          <p class="view"><a href="/"/>Home <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{site.baseurl}}/"/>Home <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="/network-page">Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{site.baseurl}}/network-page">Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{site.baseurl}}/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
