--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,19 @@
         <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-        {% endif %}
           <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">The Texas Shooting Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">Sentiment Analysis 😊<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">The Texas Shooting Sentiment Analysis<small>{{ github_name }}</small></a></p>
+
+
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-network-page">The Las Vegas Shooting Network <small>{{ github_name }}</small></a></p>
+
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-sentiment-page">The Las Vegas Shooting Sentiment Analysis<small>{{ github_name }}</small></a></p>
+
+        {% if site.github.is_project_page %}
+          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
           
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
@@ -48,7 +53,7 @@
         {% if site.github.is_project_page %}
 <!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
         {% endif %}
-        <p><small>Made with 🍕 and 🧠 </small></p>
+        <p><small>Made with 🍕 and 🍔 </small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
