--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
           
+        {% endif %}
+
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
@@ -72,4 +74,3 @@
   {% endif %}
   </body>
 </html>
-
