--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,14 +20,14 @@
 
           <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">The Texas Shooting Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">The Texas Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">The Texas Shooting Sentiment Analysis<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">The Texas Sentiment Analysis<small>{{ github_name }}</small></a></p>
 
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-network-page">The Las Vegas Shooting Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-network-page">The Las Vegas Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-sentiment-page">The Las Vegas Shooting Sentiment Analysis<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-sentiment-page">The Las Vegas Sentiment Analysis<small>{{ github_name }}</small></a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
@@ -40,8 +40,7 @@
 
         {% if site.show_downloads %}
           <ul>
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Contact <strong>TEAM</strong></a></li>
+            <li><a href="mailto:duarteocarmo@gmail.com; ahmet.baglan1@gmail.com; wisse-barkhof@hotmail.com;?Subject=Event%20Analysis%20Tool">Contact <strong>Team</strong></a></li>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook</strong></a></li>
           </ul>
         {% endif %}
