--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
           <ul>
             <li><a href="mailto:duarteocarmo@gmail.com; ahmet.baglan1@gmail.com; wisse-barkhof@hotmail.com;?Subject=Event%20Analysis%20Tool">Contact <strong>Team</strong></a></li>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook</strong></a></li>
+            <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Share <strong>Page</strong></a></li>
           </ul>
         {% endif %}
       </header>
