--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,6 +1,26 @@
 @import "fonts";
 @import "rouge-github";
 
+// .graph-wrapper{
+//   margin-top: 10px;
+//   margin-bottom: 20px;
+// }
+
+button {
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
+  color: #494949;
+}
+
+.selected {
+  background-color: #e5e5e5;
+}
+
+.button-block {
+  padding-top: 3px;
+  padding-bottom: 20px;
+}
+
 .back-button {
   float: right;
 }
