added main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,20 +40,26 @@
 
           <ul>
             <li><a href="mailto:duarteocarmo@gmail.com; ahmet.baglan1@gmail.com; wisse-barkhof@hotmail.com;?Subject=Event%20Analysis%20Tool">Contact <strong>Team</strong></a></li>
-            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook</strong></a></li>
             <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Share <strong>Page</strong></a></li>
+            <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Visit <strong>Course</strong></a></li>
+          </ul>
+          <ul>            
+            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 1</strong></a></li>
+            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 2</strong></a></li>
+            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>
+            Data</strong></a></li>
           </ul>
       </header>
       <section>
         
       {{ content }}
 
-      </section>s
+      </section>
       <footer>
         {% if site.github.is_project_page %}
 <!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
         {% endif %}
-        <p><small>Made with 🍕 and 🍔 </small></p>
+        <p><small>Made with 🍕 and ☕️ </small></p>
       </footer>
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
