--- a/_includes/gcc.html
+++ b/_includes/gcc.html
@@ -16,6 +16,7 @@
   <svg id="gcc" style="width: 100%;" width="800" height="600"></svg>
 </div>
 
+
 <script>
     var scale = 'normal';
     var graph = 'mention';
@@ -35,9 +36,9 @@
       $("#normal-gcc").click(function(){
         $("#normal-gcc").addClass("selected")
         $("#log-gcc").removeClass("selected")
-        removeGcc();
+        remove();
         scale = 'normal';
-        renderGcc();
+        render();
       });
       $("#log-gcc").click(function(){
         $("#log-gcc").addClass("selected")
@@ -65,53 +66,51 @@
       });
     });
 
-    function scaleSizeGcc(d) {
+    function scaleSize(d) {
       if (scale === 'normal') {
         return 3;
       }
       if (scale === 'log') {
-        var factor = d > 0 ? Math.log(d.degree) : 0.1;
-        return graphSettings[graph]['scaleFactor'] * factor;
+        return gccSettings[graph]['scaleFactor'] * Math.log(d.degree);
       };
     };
 
     function removeGcc() {
-
+      var svg = d3.select("#gcc");
+      svg.selectAll("*").remove();
     }
 
     function renderGcc() {
       var svg = d3.select("#gcc"),
       width = +svg.attr("width"),
       height = +svg.attr("height");
+
       var color = d3.scaleOrdinal(d3.schemeCategory20);
-      console.log('Rendering GCC with this svg', svg);
 
       var simulation = d3.forceSimulation()
         .force("link", d3.forceLink().id(function(d) { return d.id; }))
         .force("charge", d3.forceManyBody().strength(gccSettings[graph]['strength']))
         .force("center", d3.forceCenter(width / 2, height / 2));
-
       d3.json("data/" + graph + "_gcc.json", function(error, graph) {
         if (error) throw error;
-        console.log('graph', graph);
+
         var link = svg.append("g")
           .attr("class", "links")
           .selectAll("line")
           .data(graph.links)
           .enter().append("line")
           .attr("stroke-width", function(d) { return Math.sqrt(d.value); });
-        console.log('SVG with links', svg);
+
         var node = svg.append("g")
           .attr("class", "nodes")
           .selectAll("circle")
           .data(graph.nodes)
           .enter().append("circle")
-          .attr("r", scaleSizeGcc)
+          .attr("r", scaleSize)
           .call(d3.drag()
               .on("start", dragstarted)
               .on("drag", dragged)
               .on("end", dragended));
-        console.log('SVG with nodes', svg);
 
         node.append("title")
           .text(function(d) { return '#' + d.id; });
@@ -122,7 +121,7 @@
 
         simulation.force("link")
           .links(graph.links);
-        console.log('simulation', simulation);
+
         function ticked() {
           link
             .attr("x1", function(d) { return d.source.x; })
@@ -134,7 +133,7 @@
             .attr("cx", function(d) { return d.x; })
             .attr("cy", function(d) { return d.y; });
         }
-    });
+      });
     };
 
     function dragstarted(d) {
