--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,10 +1,10 @@
 @import "fonts";
 @import "rouge-github";
 
-// .graph-wrapper{
-//   margin-top: 10px;
-//   margin-bottom: 20px;
-// }
+.graph-wrapper{
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 
 button {
   border: 1px solid #e5e5e5;
