--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,6 +1,11 @@
 @import "fonts";
 @import "rouge-github";
 
+.graph-settings {
+  width: 50%;
+  float: left;
+}
+
 .graph-wrapper{
   margin-top: 10px;
   margin-bottom: 20px;
