--- a/_includes/gcc_tables.html
+++ b/_includes/gcc_tables.html
@@ -1,32 +1,32 @@
 <table>
   <caption>
-    Network Stats Overview
+    GCC Stats Overview
   </caption>
   <thead>
     <tr>
       <th></th>
-      <th>Mention Graph</th>
-      <th>Hashtag Graph</th>
+      <th>Mention GCC</th>
+      <th>Hashtag GCC</th>
     </tr>
   </thead>
   <tr>
     <td>Nodes</td>
-    <td>15992</td>
-    <td>15992</td>
+    <td>1091</td>
+    <td>718</td>
   </tr>
   <tr>
     <td>Edges</td>
-    <td>1700</td>
-    <td>29894</td>
+    <td>1211</td>
+    <td>29828</td>
   </tr>
   <tr>
     <td>Average Degree</td>
-    <td>0.21</td>
-    <td>3.74</td>
+    <td>2.22</td>
+    <td>83.0863509749</td>
   </tr>
   <tr>
     <td>Components</td>
-    <td>14501</td>
-    <td>15245</td>
+    <td>1</td>
+    <td>1</td>
   </tr>
 </table>
