--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,20 +18,20 @@
         <a href="{{ site.github.url }}"> <h1>{{ site.title | default: site.github.repository_name }}</h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-          <p class="view"><a href=https://duarteocarmo.github.io/Project_Page_SG/>Home <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ site.baseurl }}"/>Home <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/network-page">The Texas Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ site.baseurl }}/network-page">The Texas Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/sentiment-page">The Texas Sentiment Analysis<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ site.baseurl }}/sentiment-page">The Texas Sentiment Analysis<small>{{ github_name }}</small></a></p>
 
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-network-page">The Las Vegas Network <small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ site.baseurl }}/LV-network-page">The Las Vegas Network <small>{{ github_name }}</small></a></p>
 
-          <p class="view"><a href="https://duarteocarmo.github.io/Project_Page_SG/LV-sentiment-page">The Las Vegas Sentiment Analysis<small>{{ github_name }}</small></a></p>
+          <p class="view"><a href="{{ site.baseurl }}/LV-sentiment-page">The Las Vegas Sentiment Analysis<small>{{ github_name }}</small></a></p>
 
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
-          
+
         {% endif %}
 
         {% if site.github.is_user_page %}
@@ -43,7 +43,7 @@
             <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Share <strong>Page</strong></a></li>
             <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Visit <strong>Course</strong></a></li>
           </ul>
-          <ul>            
+          <ul>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 1</strong></a></li>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 2</strong></a></li>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>
@@ -51,7 +51,7 @@
           </ul>
       </header>
       <section>
-        
+
       {{ content }}
 
       </section>
