--- a/_includes/gcc.html
+++ b/_includes/gcc.html
@@ -2,15 +2,15 @@
   <div class="graph-settings">
     <label>Node size scale</label>
     <div class="button-block">
-      <button id="normal-gcc" class="selected">Uniform size</button>
-      <button id="log-gcc">Logarithmic in degree</button>
+      <button type="button" id="normal-gcc" class="selected">Uniform size</button>
+      <button type="button" id="log-gcc">Logarithmic in degree</button>
     </div>
   </div>
   <div class="graph-settings">
     <label>Type of graph</label>
     <div class="button-block">
-      <button id="mention-gcc" class="selected">Mention Graph</button>
-      <button id="hashtag-gcc">Hashtag Graph</button>
+      <button type="button" id="mention-gcc" class="selected">Mention Graph</button>
+      <button type="button" id="hashtag-gcc">Hashtag Graph</button>
     </div>
   </div>
   <svg id="gcc" style="width: 100%;" width="800" height="600"></svg>
