--- a/_includes/graphs.html
+++ b/_includes/graphs.html
@@ -2,15 +2,15 @@
   <div class="graph-settings">
     <label>Node size scale</label>
     <div class="button-block">
-      <button id="normal-graph" class="selected">Uniform size</button>
-      <button id="log-graph">Logarithmic in degree</button>
+      <button type="button" id="normal-graph" class="selected">Uniform size</button>
+      <button type="button" id="log-graph">Logarithmic in degree</button>
     </div>
   </div>
   <div class="graph-settings">
     <label>Type of graph</label>
     <div class="button-block">
-      <button id="mention-graph" class="selected">Mention Graph</button>
-      <button id="hashtag-graph">Hashtag Graph</button>
+      <button type="button" id="mention-graph" class="selected">Mention Graph</button>
+      <button type="button" id="hashtag-graph">Hashtag Graph</button>
     </div>
   </div>
   <svg id="graph" style="width: 100%;" width="800" height="600"></svg>
