table regeneration fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,12 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <div class="button-group">
           <!-- <p class="view"><a href="{{ site.baseurl }}"/>Home</p></a> -->
-          <label class="button-label">Select Shooting Location</label>
+          <label class="button-label">Select Shooting</label>
           <div>
-            <button type="button" id="lasvegas-btn" class="selected">Las Vegas (NV)</button>
-            <button type="button" id="texas-btn">Sutherland Springs (TX)</button>
+            <button type="button" id="lasvegas-btn" class="selected">Las Vegas (NV)
+            </button>
+            <button type="button" id="texas-btn">Sutherland Springs (TX)
+            </button>
           </div>
         </div>
         <div class="link-list" id="lasvegas">
