--- a/_includes/partition-texas.html
+++ b/_includes/partition-texas.html
@@ -14,10 +14,10 @@
     </div>
   </div>
   <svg id="gcc" style="width: 100%;" width="800" height="600"></svg>
-  <table id="mention-legend">
+  <table id="legend">
     <capiton>Top accounts by degree per partition</capiton>
     <thead>
-      <th>
+      <tr>
         <th>Partition</th>
         <th>Size</th>
         <th>Top Account</th>
@@ -25,7 +25,7 @@
         <th>URL</th>
         <th>Degree</th>
         <th>Followers</th>
-      </th>
+      </tr>
     </thead>
   </table>
 </div>
@@ -44,19 +44,20 @@
     var color = d3.scaleOrdinal(d3.schemeCategory20);
 
     var columns = ['Partition', 'Partition Size', 'Screen Name', 'Location', 'Url', 'Degree', 'Followers'];
+    var table = document.getElementById('legend');
 
     function generateTable() {
-      console.log('generateTable')
+      console.log('generateTable', table.rows.length)
 
       $.getJSON('data/' + graph + '_partition_accounts.json', function(json) {
-          var table = document.getElementById('mention-legend');
-
-          while(table.rows.length > 0) {
-            table.deleteRow(0);
+          var tableLength = table.rows.length
+          for (var rowNumber = 1; rowNumber < tableLength; rowNumber++) {
+            table.deleteRow(1);
           }
+
           var accounts = sortByKey(json, 'Partition');
           for (var i in accounts) {
-            var rowNumber = Number(i);
+            var rowNumber = Number(i) + 1;
             var row = table.insertRow(rowNumber);
             row.style.color = color(accounts[i]['Partition']);
             for (j = 0; j < columns.length; j++) {
