--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,12 +29,16 @@
         </div>
         <div class="link-list" id="lasvegas">
           <p class="view">
-            <a href="{{ site.baseurl }}/LV-network-page">The Network </a>
+            <a href="{{ site.baseurl }}/network-page-lv">The Network </a>
             <small class="subscript">#lasvegasshooting</small>
 
           </p>
           <p class="view">
-            <a href="{{ site.baseurl }}/LV-sentiment-page">Sentiment Analysis</a>
+            <a href="{{ site.baseurl }}/sentiment-page-lv">Sentiment Analysis</a>
+            <small class="subscript">#lasvegasshooting</small>
+          </p>
+          <p class="view">
+            <a href="{{ site.baseurl }}/community-lv">Community Analysis </a>
             <small class="subscript">#lasvegasshooting</small>
           </p>
         </div>
