--- a/_includes/graph_tables-lv.html
+++ b/_includes/graph_tables-lv.html
@@ -7,26 +7,33 @@
       <th></th>
       <th>Mention Graph</th>
       <th>Hashtag Graph</th>
+      <th>Sources of Information Graph</th>
     </tr>
   </thead>
   <tr>
     <td>Nodes</td>
-    <td>15992</td>
-    <td>15992</td>
+    <td>90721</td>
+    <td>90721</td>
+    <td>4730</td>
+    
   </tr>
   <tr>
     <td>Edges</td>
-    <td>1700</td>
-    <td>29894</td>
+    <td>6209</td>
+    <td>1453345</td>
+    <td>15234</td>
   </tr>
   <tr>
     <td>Average Degree</td>
-    <td>0.21</td>
-    <td>3.74</td>
+    <td>0.139</td>
+    <td>32.03</td>
+    <td>6.44</td>
+    
   </tr>
   <tr>
     <td>Components</td>
-    <td>14501</td>
-    <td>15245</td>
+    <td>85876</td>
+    <td>89025</td>
+    <td>2998</td>
   </tr>
 </table>
