--- a/_includes/gcc_tables-lv.html
+++ b/_includes/gcc_tables-lv.html
@@ -7,26 +7,25 @@
       <th></th>
       <th>Mention GCC</th>
       <th>Hashtag GCC</th>
+      <th>Sources of Info GCC</th>
     </tr>
   </thead>
   <tr>
     <td>Nodes</td>
-    <td>1091</td>
-    <td>718</td>
+    <td>3832</td>
+    <td>1697</td>
+    <td>1602</td>
   </tr>
   <tr>
     <td>Edges</td>
-    <td>1211</td>
-    <td>29828</td>
+    <td>5078</td>
+    <td>1453345</td>
+    <td>15088</td>
   </tr>
   <tr>
     <td>Average Degree</td>
-    <td>2.22</td>
-    <td>83.0863509749</td>
+    <td>2.65</td>
+    <td> 1712.84</td>
+    <td>18.83</td>
   </tr>
-  <tr>
-    <td>Components</td>
-    <td>1</td>
-    <td>1</td>
-  </tr>
-</table>
+  
