--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
           <ul>
             <li><a href="mailto:duarteocarmo@gmail.com; ahmet.baglan1@gmail.com; wisse-barkhof@hotmail.com;?Subject=Event%20Analysis%20Tool">Contact <strong>Team</strong></a></li>
             <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Share <strong>Page</strong></a></li>
-            <li><a href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fduarteocarmo.github.io%2FProject_Page_SG%2F&text=Network%20and%20Sentiment%20Tool%20">Visit <strong>Course</strong></a></li>
+            <li><a href="https://github.com/suneman/socialgraphs2017/wiki">Visit <strong>Course</strong></a></li>
           </ul>
           <ul>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 1</strong></a></li>
@@ -86,7 +86,8 @@
       {{ content }}
 
       </section>
-      <footer>
+      <footer style=" position: fixed;
+    bottom: 0;">
         {% if site.github.is_project_page %}
 <!--        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>-->
         {% endif %}
