--- a/_includes/partition-lv.html
+++ b/_includes/partition-lv.html
@@ -144,7 +144,7 @@
         .force("link", d3.forceLink().id(function(d) { return d.id; }))
         .force("charge", d3.forceManyBody().strength(gccSettings[graph]['strength']))
         .force("center", d3.forceCenter(width / 2, height / 2));
-      d3.json("data/" + graph + "_partition.json", function(error, graph) {
+      d3.json("data/" + graph + "_partition_LV.json", function(error, graph) {
         if (error) throw error;
     
         var link = svg.append("g")
