community table fix

--- a/_includes/gcc.html
+++ b/_includes/gcc.html
@@ -36,9 +36,9 @@
       $("#normal-gcc").click(function(){
         $("#normal-gcc").addClass("selected")
         $("#log-gcc").removeClass("selected")
-        remove();
+        removeGcc();
         scale = 'normal';
-        render();
+        renderGcc();
       });
       $("#log-gcc").click(function(){
         $("#log-gcc").addClass("selected")
