--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
             <li><a href="https://github.com/suneman/socialgraphs2017/wiki">Visit <strong>Course</strong></a></li>
           </ul>
           <ul>
-            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 1</strong></a></li>
+            <li><a href="https://nbviewer.jupyter.org/gist/anonymous/fc1eeb6469fb316710f448f0fca3508c">Download <strong>Notebook Texas</strong></a></li>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 2</strong></a></li>
             <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Data</strong></a></li>
           </ul>
