--- a/_includes/gcc-lv.html
+++ b/_includes/gcc-lv.html
@@ -1,4 +1,34 @@
-<div class="graph-wrapper">
+<div class="disclaimer">
+  <i>
+    Due to the large sizes of these networks, we have turned off D3js by default
+    to load the page smoothly. Below, you can toggle it on or off. If you turn
+    it on, please be patient. Also, stick to the 'mention' and 'information'
+    networks, they are a bit more manageable in size than the 'hashtag' graph
+    and make sure to turn this one 'off' when you turn another one 'on'.
+
+
+  </i>
+  <strong>
+    Only static images of the 'mention' and 'info' graph are included
+    since the 'hashtag' graph was to large to display.
+  </strong>
+  <div class="toggle-graph">
+    <label>D3js Toggle</label>
+    <div class="button-block">
+      <button  id="off-gcc" class="selected">Off</button>
+      <button  id="on-gcc">On</button>
+    </div>
+  </div>
+</div>
+<div class="graph-images-gcc">
+  <p style="text-align: center">
+    <img style="width:100%" src="images/mention_gcc_lv.png"/>
+  </p>
+  <p style="text-align: center">
+    <img style="width:100%" src="images/info_gcc_lv.png"/>
+  </p>
+</div>
+<div class="graph-wrapper-gcc" style="display: none">
   <div class="graph-settings">
     <label>Node size scale</label>
     <div class="button-block">
@@ -9,8 +39,9 @@
   <div class="graph-settings">
     <label>Type of graph</label>
     <div class="button-block">
-      <button type="button" id="mention-gcc" class="selected">Mention Graph</button>
+      <button type="button" id="mention-gcc">Mention Graph</button>
       <button type="button" id="hashtag-gcc">Hashtag Graph</button>
+      <button type="button" id="info-gcc" class="selected">Information Graph</button>
     </div>
   </div>
   <svg id="gcc" style="width: 100%;" width="800" height="600"></svg>
@@ -19,7 +50,7 @@
 
 <script>
     var scale = 'normal';
-    var graph = 'mention';
+    var graph = 'info';
 
     var gccSettings = {
       'hashtag': {
@@ -29,16 +60,39 @@
       'mention': {
         'strength': -0.8,
         'scaleFactor': 5
+      },
+      'info': {
+        'strength': -8,
+        'scaleFactor': 3,
       }
     }
+
+    $(document).ready(function(){
+      $('#off-gcc').click(function() {
+        console.log('Turning off');
+        $('#off-gcc').addClass('selected');
+        $('#on-gcc').removeClass('selected');
+        $('.graph-wrapper-gcc').hide();
+        $('.graph-images-gcc').show();
+        removeGcc();
+      });
+      $('#on-gcc').click(function() {
+        console.log('Turning on');
+        $('#on-gcc').addClass('selected');
+        $('#off-gcc').removeClass('selected');
+        $('.graph-wrapper-gcc').show();
+        $('.graph-images-gcc').hide();
+        renderGcc();
+      });
+    });
 
     $(document).ready(function(){
       $("#normal-gcc").click(function(){
         $("#normal-gcc").addClass("selected")
         $("#log-gcc").removeClass("selected")
-        remove();
+        removeGcc();
         scale = 'normal';
-        render();
+        renderGcc();
       });
       $("#log-gcc").click(function(){
         $("#log-gcc").addClass("selected")
@@ -53,15 +107,25 @@
       $("#mention-gcc").click(function(){
         $("#mention-gcc").addClass("selected")
         $("#hashtag-gcc").removeClass("selected")
+        $("#info-gcc").removeClass("selected")
         removeGcc();
         graph = 'mention';
-        renderGcc();
+        renderGraph();
       });
-      $("#hashtag-gcc").click(function(){
+      $("#hashtag").click(function(){
         $("#hashtag-gcc").addClass("selected")
         $("#mention-gcc").removeClass("selected")
+        $("#info-gcc").removeClass("selected")
         removeGcc();
         graph = 'hashtag';
+        renderGcc();
+      });
+      $("#hashtag").click(function(){
+        $("#info-gcc").addClass("selected")
+        $("#mention-gcc").removeClass("selected")
+        $("#hashtag-gcc").removeClass("selected")
+        removeGcc();
+        graph = 'info';
         renderGcc();
       });
     });
@@ -91,7 +155,7 @@
         .force("link", d3.forceLink().id(function(d) { return d.id; }))
         .force("charge", d3.forceManyBody().strength(gccSettings[graph]['strength']))
         .force("center", d3.forceCenter(width / 2, height / 2));
-      d3.json("data/" + graph + "_gcc.json", function(error, graph) {
+      d3.json("data/" + graph + "_gcc_LV.json", function(error, graph) {
         if (error) throw error;
 
         var link = svg.append("g")
