url back in table

--- a/_includes/partition-lv.html
+++ b/_includes/partition-lv.html
@@ -24,6 +24,7 @@
         <th>Users who cited %</th>
         <th>Size</th>
         <th>Screen Name</th>
+        <th>Url</th>
         <th>Name</th>
         <th>Location</th>
         <th>Followers</th>
@@ -46,7 +47,7 @@
 
     var color = d3.scaleOrdinal(d3.schemeCategory20);
 
-    var columns =['Community No', 'Most Cited Website in Community','Percentage of Users who cited', 'Community Size', 'Screen Name', 'Name', 'Location', 'Followers', 'Degree'];
+    var columns =['Community No', 'Most Cited Website in Community','Percentage of Users who cited', 'Community Size', 'Screen Name', 'Url', 'Name', 'Location', 'Followers', 'Degree'];
     var table = document.getElementById('legend');
 
     function generateTable() {
