--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,9 +76,9 @@
             <li><a href="https://github.com/suneman/socialgraphs2017/wiki">Visit <strong>Course</strong></a></li>
           </ul>
           <ul>
-            <li><a href="https://nbviewer.jupyter.org/gist/anonymous/fc1eeb6469fb316710f448f0fca3508c">Download <strong>Notebook Texas</strong></a></li>
-            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Notebook 2</strong></a></li>
-            <li><a href="https://www.google.pt/?gws_rd=ssl">Download <strong>Data</strong></a></li>
+            <li><a href="http://nbviewer.jupyter.org/gist/anonymous/64b9e6ec6ca9b66e0b46df16a2397329">Notebook<strong>LasVegas</strong></a></li>
+            <li><a href="https://nbviewer.jupyter.org/gist/anonymous/fc1eeb6469fb316710f448f0fca3508c">Notebook<strong>Texas</strong></a></li>
+            <li><a href="mailto:duarteocarmo@gmail.com; ahmet.baglan1@gmail.com; wisse-barkhof@hotmail.com;?Subject=Data%20Request">Download <strong>Data</strong></a></li>
           </ul>
       </header>
       <section>
